# DoDo

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  DodoConfig.cmake  DodoConfigVersion.cmake  README.md  chunkyConfig.cmake  chunkyConfigVersion.cmake  doxygen.conf
cmake/: DodoConfig.cmake  DodoConfigVersion.cmake
examples/: CMakeLists.txt
examples/DataAndWorker/src/: main.cpp
examples/FunctionsAndData/src/: ComponentA.hpp  ComponentB.hpp  main.cpp
examples/GoL/src/: main.cpp
examples/HardwareAndWorker/src/: main.cpp
examples/Match_example/src/: libcode.hpp  main.cpp
examples/TestPropertyManager/src/: main.cpp
examples/TitanSim/: CMakeLists.txt
examples/TitanSim/src/: main.cpp
examples/benchmark_HW_Graph_scaling1/: CMakeLists.txt
examples/benchmark_HW_Graph_scaling1/src/: main.cpp
examples/benchmark_HW_Graph_scaling2/src/: main.cpp
examples/benchmark_HW_Graph_scaling3/src/: main.cpp
examples/benchmark_data_transfer_scaling/: CMakeLists.txt
examples/benchmark_data_transfer_scaling/src/: main.cpp
examples/benchmark_gol_code_overhead/: CMakeLists.txt
examples/benchmark_gol_code_overhead/src/: main.cpp
examples/createData/src/: main.cpp
examples/createHW/src/: main.cpp
examples/example09/src/: cluster_definition.hpp  main.cpp
examples/example1/: CMakeLists.txt
examples/example1/src/: BGL.hpp  main.cpp
examples/example10/src/: main.cpp
examples/example11/src/: main.cpp
examples/example2/: CMakeLists.txt
examples/example2/src/: LaserCPU.hpp  cluster_definition.hpp  main.cpp
examples/example3/: CMakeLists.txt
examples/example3/src/: cluster_definition.hpp  main.cpp
examples/example4/src/: components.hpp  main.cpp
examples/example5/src/: main.cpp
examples/example6/src/: TestProcessing.hpp  TestSink.hpp  TestSource.hpp  main.cpp
examples/example7/src/: TestProcessing.hpp  TestProcessingMeta.hpp  TestSink.hpp  TestSinkMeta.hpp  TestSource.hpp  TestSourceMeta.hpp  main.cpp
examples/example8/src/: cluster_definition.hpp  main.cpp
examples/example_HW_Graph_K20/: CMakeLists.txt
examples/example_HW_Graph_K20/src/: main.cpp
examples/test_dijkstra/src/: main.cpp
examples/thesis_HW_Graph/src/: main.cpp
include/: chunky.hpp  dodo.hpp  dodo2.hpp  mach7.hpp
include/chunky/: graph.hpp  physical.hpp  utility.hpp  version.hpp
include/chunky/graph/: AttributeGraph.hpp  AttributeMapStore.hpp  BGL.hpp  ChunkyGraphProperty.hpp  Property.hpp
include/chunky/physical/: attributes.hpp
include/chunky/physical/attributes/: EnergyLevel.hpp  Speed.hpp
include/chunky/utility/: tuple_index.hpp  uniqueID.hpp
include/dodo/: components.hpp  graph.hpp  hardware.hpp  logic.hpp  mapping.hpp  model.hpp  physical.hpp  process.hpp  types.hpp  utility.hpp
include/dodo/components/: Chunk.hpp  Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentHandle.hpp  ComponentImpl.hpp  ComponentMetadataInterface.hpp  ComponentRunInterface.hpp  Connection.hpp  DependencyBGL.hpp  InPort.hpp  MetadataNetwork.hpp  Network.cpp  Network.hpp  OutPort.hpp  Port.hpp  RingBuffer.hpp  TestProcessing.hpp  TestSink.hpp  TestSource.hpp  dependency.hpp  detail.hpp  meta.hpp  run.hpp  types.hpp
include/dodo/components/dependency/: AtomicComponent.hpp  BGL.hpp  BGLWriter.hpp  ComponentBase.hpp  Edge.hpp  HierarchicalComponent.hpp  ResourceGraph.hpp  TemplatePipe.hpp  Vertex.hpp
include/dodo/components/detail/: MetadataNetworkImpl.hpp
include/dodo/components/meta/: Interface.hpp  InterfaceStatic.hpp  Network.hpp  detail.hpp  traits.hpp
include/dodo/components/run/: Interface.hpp
include/dodo/components/types/: Base.hpp  PortKey.hpp  PortVertexContainer.hpp  ResourceID.hpp
include/dodo/graph/: AttributeGraph.hpp  AttributeMapStore.hpp  BGL.hpp  ComponentGraph.hpp  CoordinateGraph.hpp  DataGraph.hpp  HWNode.hpp  HWPropertyInterface.hpp  HardwareGraph.hpp  HardwareGraphVertex.hpp  InterconnectEdge.hpp  InterconnectGraph.hpp  NodeType.hpp  PairBGL.hpp  Property.hpp  SimpleBGL.hpp  SimpleBGLWriter.hpp  TagInfo.hpp  TreeIDGraph.hpp  detail.hpp
include/dodo/graph/detail/: MemberIterator.hpp  PrettyPrinter.hpp  SimpleBGLBase.hpp
include/dodo/hardware/: Bandwidth.hpp  ConsistsOfGraph.hpp  HWNode.hpp  HWPropertyInterface.hpp  HardwareAbstraction.hpp  HardwareGraph.hpp  HardwareGraphVertex.hpp  InterconnectEdge.hpp  InterconnectGraph.hpp  MemoryCapacity.hpp  NodeType.hpp  Property.hpp  TagInfo.hpp  TransferGraph.hpp  attributes.hpp  detail.hpp  elements.hpp
include/dodo/hardware/attributes/: Bandwidth.hpp  EnergyLevel.hpp  Memorysize.hpp  Name.hpp  Plugin.hpp  Speed.hpp  Tag.hpp
include/dodo/hardware/detail/: Arbiter.hpp
include/dodo/hardware/elements/: Base.hpp  Memory.hpp  ProcessingElement.hpp
include/dodo/mapping/: SimpleMapping.hpp  component2worker.hpp  data2worker.hpp  worker2hardware.hpp
include/dodo/mapping/component2worker/: Interface.hpp  distributeRoundRobin.hpp
include/dodo/model/: data.hpp  hardware.hpp  routine.hpp  worker.hpp
include/dodo/physical/: attributes.hpp
include/dodo/process/: CommunicationMeta.hpp  ComponentMeta.hpp  DependencyBGL.hpp  DependencyGraph.hpp  Ports.hpp  metadata.hpp
include/dodo/types/: StringLike.hpp
include/dodo/utility/: NToMMap.hpp  OneToNMap.hpp  PropertyManager.hpp  RingBuffer.hpp  convert_tuple.hpp  fusion_pointer_to_member.hpp  tree_id.hpp  tuple_index.hpp  uniqueID.hpp
include/dodo2/: graph.hpp  mapping.hpp  model.hpp  utility.hpp  version.hpp
include/dodo2/graph/: ComponentGraph.hpp  CoordinateGraph.hpp  DataGraph.hpp  InterconnectGraph.hpp  SimpleBGL.hpp  SimpleBGLWriter.hpp  TreeIDGraph.hpp  detail.hpp
include/dodo2/mapping/: component2worker.hpp  data2pos.hpp  data2worker.hpp  worker2hardware.hpp
include/dodo2/model/: data.hpp  hardware.hpp  routine.hpp  worker.hpp
include/dodo2/types/: Base.hpp  StringLike.hpp
include/dodo2/utility/: NToMMap.hpp  OneToNMap.hpp  PropertyManager.hpp  convert_tuple.hpp  tree_id.hpp  tuple_index.hpp  type_reflection.hpp
utility/: autoHeaderLicense.txt  breakNestedNamespaces.sh  generateConvenienceIncludes.sh
(+103 files in other folders)
